<resources>
    <string name="app_name">BoardGamesMeetApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="signup">Sign up</string>
    <string name="signup_success">Sign up done!</string>
    <string name="signup_failed">"Username already exists"</string>
    <string name="add_new_event">Add new event</string>
    <string name="new_event_failed">Fill all the fields!</string>
    <string name="add_activity">Add event</string>
    <string name="game">Game</string>
    <string name="number_of_players">Number of players</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="where">Where</string>
    <string name="submit">Submit</string>
    <string name="settings">Settings</string>
    <string name="new_event_success">New event created!</string>
    <string name="statistics">Statistics</string>
    <string name="my_activity">My activities</string>
    <string name="my_activities">My activities</string>
    <string name="profile_hint_description">Provide some personal information helping other users to know you better</string>
    <string name="confirm">Confirm</string>
    <string name="favourite_games">Favourite game</string>
    <string name="favourite_places">Favourite place where to play boardgames</string>
    <string name="age">Age</string>
    <string name="username">Username</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="signup_hint">Don\'t you have an account? Signup!</string>
    <string name="board_games">Board Games</string>
    <string name="app_logo">App logo</string>
    <string name="go_to_signup_button_description">Go to signup page</string>
    <string name="go_to_login_button_description">Go to login page</string>
    <string name="password_empty">Password field empty!</string>
    <string name="email_empty">Email field empty!</string>
    <string name="login_hint">Do you have an account? Login!</string>
    <string name="profile">Profile</string>
    <string name="modify_information">Modify information</string>
    <string name="history">History</string>
    <string name="logout">Logout</string>
    <string name="go_back_to_profile">Go back to profile</string>
    <string name="event_canceled">Event canceled</string>
    <string name="event_unsubscribed">Event unsubscribed</string>
    <string name="search">Search</string>
    <string name="place">Place</string>
    <string name="filter_dialog_title">Filter fields</string>
    <string name="modify">Modify</string>
    <string name="list_of_players">List of players</string>
    <string name="more">More</string>
    <string name="network_failure">Network error has occurred!</string>
    <string name="logout_question">Do you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="create">Create</string>
    <string name="empty_field_error">Empty field!</string>
    <string name="old_date_error">We cannot travel in the past!</string>
    <string name="unknown_error">Something went wrong!</string>
    <string name="modify_event_success">Event modified!</string>
    <string name="number_of_players_error">There must be at least 2 players</string>
    <string name="players">Players</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="done">Done</string>
    <string name="date_picker_title">Select date</string>
    <string name="time_picker_title">Select time</string>
    <string name="my_events">My events</string>
    <string name="find_events">Find events</string>
    <string name="cancel_event_dialog_title">Do you want to cancel this event?</string>
    <string name="unsubscribe_event_dialog_title">Do you want to unsubscribe to this event?</string>
    <string name="cancel">Cancel</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="search_game">Search: Game</string>
    <string name="search_place">Search: Place</string>
    <string name="subscribtion">Subscrbtion</string>
    <string name="event_subscribe_dialog_title">Do you want to subscribe to this event?</string>
</resources>